--- a/starter_code/WeatherPy.ipynb
+++ b/starter_code/WeatherPy.ipynb
@@ -4663,7 +4663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
@@ -4709,12 +4709,15 @@
     "plt.title('Temperature vs. Latitude Linear Regression Plot Northern Hemisphere')\n",
     "print(f\"The r-value is: {rvalue}\")\n",
     "\n",
+    "# Save the figure\n",
+    "plt.savefig(\"output_data/Fig5.png\")\n",
+    "\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -4760,6 +4763,9 @@
     "plt.title('Temperature vs. Latitude Linear Regression Plot Southern Hemisphere')\n",
     "print(f\"The r-value is: {rvalue}\")\n",
     "\n",
+    "# Save the figure\n",
+    "plt.savefig(\"output_data/Fig6.png\")\n",
+    "\n",
     "plt.show()"
    ]
   },
@@ -4779,7 +4785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
@@ -4825,12 +4831,15 @@
     "plt.title('Humidity vs. Latitude Linear Regression Plot Northern Hemisphere')\n",
     "print(f\"The r-value is: {rvalue}\")\n",
     "\n",
+    "# Save the figure\n",
+    "plt.savefig(\"output_data/Fig7.png\")\n",
+    "\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
@@ -4876,6 +4885,9 @@
     "plt.title('Humidity vs. Latitude Linear Regression Plot Southern Hemisphere')\n",
     "print(f\"The r-value is: {rvalue}\")\n",
     "\n",
+    "# Save the figure\n",
+    "plt.savefig(\"output_data/Fig8.png\")\n",
+    "\n",
     "plt.show()"
    ]
   },
@@ -4895,7 +4907,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
@@ -4941,12 +4953,15 @@
     "plt.title('Cloudiness vs. Latitude Linear Regression Plot Northern Hemisphere')\n",
     "print(f\"The r-value is: {rvalue}\")\n",
     "\n",
+    "# Save the figure\n",
+    "plt.savefig(\"output_data/Fig9.png\")\n",
+    "\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
@@ -4992,6 +5007,9 @@
     "plt.title('Cloudiness vs. Latitude Linear Regression Plot Southern Hemisphere')\n",
     "print(f\"The r-value is: {rvalue}\")\n",
     "\n",
+    "# Save the figure\n",
+    "plt.savefig(\"output_data/Fig10.png\")\n",
+    "\n",
     "plt.show()"
    ]
   },
@@ -5011,7 +5029,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
@@ -5053,12 +5071,15 @@
     "plt.title('Wind Speed vs. Latitude Linear Regression Plot Northern Hemisphere')\n",
     "print(f\"The r-value is: {rvalue}\")\n",
     "\n",
+    "# Save the figure\n",
+    "plt.savefig(\"output_data/Fig11.png\")\n",
+    "\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
@@ -5100,6 +5121,9 @@
     "plt.ylabel('Wind Speed')\n",
     "plt.title('Wind Speed vs. Latitude Linear Regression Plot Southern Hemisphere')\n",
     "print(f\"The r-value is: {rvalue}\")\n",
+    "\n",
+    "# Save the figure\n",
+    "plt.savefig(\"output_data/Fig12.png\")\n",
     "\n",
     "plt.show()"
    ]
