descriptions of findings

--- a/starter_code/WeatherPy.ipynb
+++ b/starter_code/WeatherPy.ipynb
@@ -4773,7 +4773,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Discussion about the linear relationship:** YOUR RESPONSE HERE"
+    "**Discussion about the linear relationship:** \n",
+    "    Visaully, the linear regressions between temperature and latitude for both hemishperes look different from each other. In the northern hemisphere, the model shows a negative relationship; as the latitude increases, the temperature descreases. In the southern hemisphere, the model shows a positive relationship; as the latitude increases, the temperature increases. At first, I thought that both models represented opposing patterns, but according to https://www.geographyrealm.com/latitude-longitude/, \"A positive latitude value indicates a location in the Northern Hemisphere, while a negative value indicates a location in the Southern Hemisphere.\" As a result, the more negative the latitude is the closer one is getting to the South Pole and the more positive the latitude the closer one is getting to the North Pole. In other words, as one moves further away from the equator at 0 degrees in either hemisphere, the temperatures get colder. I noticed that near the equator, or at 0 degrees Celsius, both hemispheres have about the same temperature, around 30 degrees Celsius. I predict, algerbraically, to see that the y-intercept for both models are about the same. The y-intercept represents the temperature at the equator, or when x is zero. The y-intercept for the North and the South Hemipsheres are 34.3 and 39.6, respectively."
    ]
   },
   {
@@ -4895,7 +4896,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Discussion about the linear relationship:** YOUR RESPONSE HERE"
+    "**Discussion about the linear relationship:** \n",
+    "    Based on my previous knowledge regarding humidity, I know that humidity is a measurement of how much moisture is held in the air, something that is higher when the air is warmer. Consequently, for the Humidity vs. Latitude models, I predict to see a negative relationship in the northern hemisphere and a positive relationship in the southern hemisphere. However, I instead see a positive relationship in the northern hemisphere and a negative relationship in the soutehrn hemisphere between humidity and latitude. Perhaps, my data has been inserted incorrectly or I've misinterpreted the values of the x-axis. Additionally, I find it interesting that a linear model was created for the nothern hemisphere. From looking that the plot, I do notice a slight increase in the slope but most of the data (excluding the outliers) appears to collect near the top of the plot with minimal change in slope. Similarly, I notice that the outliers present in the southern hemisphere plot impacted the regession line by pulling it down, causing a visually obvious decreasing slope. I wonder if those outliers were removed what would the linear regression models look like then."
    ]
   },
   {
@@ -5017,7 +5019,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Discussion about the linear relationship:** YOUR RESPONSE HERE"
+    "**Discussion about the linear relationship:** \n",
+    "    Both linear regression plots on cloudiness show data points that are viusally spread braodly seemingly without a clear relationship. Additionally, both plots have a large concentration of data points at 100% humidity that occurs at the absolute value of 40 to 80 degrees latitude. This could mean that for the regions near to the equator the humidity is very high. The linear regression equations were calculated and described below:\n",
+    "\n",
+    "Northern Hemisphere:\n",
+    "The linear regression equation is y = .16x + 54.72. With a positive slope and a y-intercept of 54.72, one could conclude that a positive relationship exists between the latitude and humidity and that at 0 degrees latitude, the humidity is at about 55%. \n",
+    "\n",
+    "Southern Hemisphere:\n",
+    "The linear regression equation is y = -0.55x + 41.1. With a negative slope and a y-intercept of 41.1, one could conclude that a negative relationship exists between the latitude and humidity and that at 0 degrees latitude, the humidity is at about 41%%. \n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -5132,7 +5143,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Discussion about the linear relationship:** YOUR RESPONSE HERE"
+    "**Discussion about the linear relationship:** \n",
+    "    For the linear regression plots for wind speed vs latitude, the northern hemisphere's model equation is y = -0.01x + 5.68 and for the southern hemisphere the equation is y = -0.01x + 7.15. I noticed that the slopes of both linear regression equations were not only the same but practically zero. That indicates that the wind speed is mostly consistent across the degrees of latitude. Another noticing was while both hemispheres had few outliers, the southern hemisphere shows more data points clocking higher wind speeds. This, including the higher y-intercept of 7.15, could mean that the southern hemisphere is windier than the northern hemisphere."
    ]
   },
   {
