saved VacationPy plots in output

--- a/starter_code/VacationPy.ipynb
+++ b/starter_code/VacationPy.ipynb
@@ -750,6 +750,8 @@
     "    scale = 1,\n",
     "    color = \"City\"\n",
     ")\n",
+    "# Save the figure\n",
+    "plt.savefig(\"output_data/Fig13.png\")\n",
     "\n",
     "# Display the map\n",
     "city_map"
@@ -1340,6 +1342,9 @@
     "    color = \"Hotel Name\",\n",
     "    hover_cols = ['Hotel Name', 'Country']\n",
     ")\n",
+    "\n",
+    "# Save the figure\n",
+    "plt.savefig(\"output_data/Fig14.png\")\n",
     "\n",
     "# Display the map\n",
     "hotel_map"
