test for vacaypy plots

--- a/starter_code/VacationPy.ipynb
+++ b/starter_code/VacationPy.ipynb
@@ -736,7 +736,7 @@
     }
    ],
    "source": [
-    "%%capture --no-display\n",
+    "#%%capture --no-display\n",
     "\n",
     "# Configure the map plot\n",
     "city_map = clean_city_data_df.hvplot.points(\n",
@@ -1327,7 +1327,7 @@
     }
    ],
    "source": [
-    "%%capture --no-display\n",
+    "#%%capture --no-display\n",
     "\n",
     "# Configure the map plot\n",
     "hotel_map = hotel_df.hvplot.points(\n",
